# walgors

./: .gitignore  .prettierrc  README.md  index.html  package.json  rsw.toml  svelte.config.js  tsconfig.json  vite.config.ts
.rsw/: rsw.crates  rsw.info
docs/: index.html
docs/assets/: index.20653ea4.css  index.27c34f72.css  index.4b83328b.css  index.5f7b69b1.css  index.6d74c222.js  index.6e5bac55.js  index.89148372.js  index.c1e44cc1.js  wasm_bg.73fb752a.wasm  wasm_bg.c4bb9028.wasm  wasm_bg.d0731900.wasm
src/: App.svelte  main.js  main.js.map  main.ts
src/lib/components/: Cell.svelte  CellSelector.svelte  ToolBar.svelte  WorldComponent.svelte
src/lib/layouts/: MainLayout.svelte
src/lib/stores/: index.js  stores.js  stores.js.map  stores.ts
src/lib/styles/: colors.scss  nodes.scss
src/lib/types/: index.js  index.js.map  toolbar-actions.enum.js  toolbar-actions.enum.js.map  toolbar-actions.enum.ts
src/pages/: index.astro
wasm/: Cargo.toml
wasm/src/: astar.rs  lib.rs  maze.rs  world.rs
