[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "A Wasm Project To Help With Pathfinding Algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
